Painel de controle

--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -128,7 +128,7 @@
     </a>
 
     <script src="../js/jquery-3.4.1.min.js"></script>
-    <script src="../js/jquery.mask.js"></script>
+    <script src="../js/jquery.mask.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/owl.carousel.min.js"></script>
     <script src="../js/main.js"></script>
