--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="./assets/pages/contact.html">Contato</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./assets/pages/login.php">Painel</a>
+                        </li>
                     </ul>
                 </div>
             </nav>
