--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Centro de Psicologia</title>
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/fslightbox.min.css">
@@ -34,6 +34,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./contact.html">Contato</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./login.php">Painel</a>
                         </li>
                     </ul>
                 </div>
