--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -1,136 +1,156 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/fslightbox.min.css">
-    <link rel="stylesheet" href="../css/owl.carousel.min.css">
-    <link rel="stylesheet" href="../css/fslightbox.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-</head>
-<body id="contact-about">
-    <header>
-        <div class="container">
-            <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand area-logo" href="#"><img src="../img/logo.png" alt="Logo"></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </button>
-                <div class="collapse navbar-collapse menu-desk" id="conteudoNavbarSuportado">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="../../index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./about.html">Quem somos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contato</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
-    </header>
-    <section id="contact">
-        <div class="container">
-          <form>
-            <div class="form-group">
-              <label for="namePaciente">Nome Completo</label>
-              <input type="text" class="form-control" id="namePaciente" placeholder="João Pedro Goulart Siqueira">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <title>Centro de Psicologia</title>
+        <link rel="stylesheet" href="../css/main.css" />
+        <link rel="stylesheet" href="../css/bootstrap.min.css" />
+        <link rel="stylesheet" href="../css/fslightbox.min.css" />
+        <link rel="stylesheet" href="../css/owl.carousel.min.css" />
+        <link rel="stylesheet" href="../css/fslightbox.min.css" />
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous"/>
+        <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    </head>
+    <body id="contact-about">
+        <header>
+            <div class="container">
+                <nav class="navbar navbar-expand-lg">
+                    <a class="navbar-brand area-logo" href="#">
+                        <img src="../img/logo.png" alt="Logo"/>
+                    </a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </button>
+                    <div class="collapse navbar-collapse menu-desk" id="conteudoNavbarSuportado">
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="../../index.html">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./about.html">Quem somos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Contato</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./login.php">Painel</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
             </div>
-            <div class="form-group">
-              <label for="emailPaciente">Email address</label>
-              <input type="email" class="form-control" id="emailPaciente" placeholder="name@example.com">
+        </header>
+        <section id="contact">
+            <div class="container">
+                <form>
+                    <div class="form-group">
+                        <label for="namePaciente">Nome completo</label>
+                        <input type="text" class="form-control" id="namePaciente" placeholder="Digite seu nome aqui"/>
+                    </div>
+                    <div class="form-group">
+                        <label for="emailPaciente">E-mail</label>
+                        <input type="email" class="form-control" id="emailPaciente" placeholder="nome@email.com"/>
+                    </div>
+                    <div class="form-row">
+                        <div class="col-md-4 col-sm-12">
+                            <div class="form-group">
+                                <label for="telPaciente">Celular</label>
+                                <input type="tel" class="form-control paciente" id="telPaciente" placeholder="(XX) 98765-4321"/>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-12">
+                            <div class="form-group">
+                                <label for="idadePaciente">Data de nascimento</label>
+                                <input type="date" class="form-control" id="idadePaciente" placeholder="dd/MM/aaaa"/>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-12">
+                            <div class="form-group">
+                                <label for="sexoPaciente">Sexo</label>
+                                <select class="form-control" id="sexoPaciente">
+                                    <option>Masculino</option>
+                                    <option>Feminino</option>
+                                    <option>Não binário</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="col-md-6 col-sm-12">
+                            <div class="form-group">
+                                <label for="acompanhamentoPaciente">Já teve acompanhamento psicológico?</label>
+                                <select class="form-control" id="acompanhamentoPaciente">
+                                    <option>Sim</option>
+                                    <option>Não</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-sm-12">
+                            <div class="form-group">
+                                <label for="planoPaciente">Possui plano de saúde?</label>
+                                <select class="form-control" id="planoPaciente">
+                                    <option>Sim</option>
+                                    <option>Não</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="col-lg-3 col-md-6 col-sm-3">
+                            <div class="form-group">
+                                <label for="estadoPaciente">Estado</label>
+                                <input type="text" class="form-control" id="estadoPaciente" placeholder="Digite seu estado"/>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-3">
+                            <div class="form-group">
+                                <label for="bairroPaciente">Bairro</label>
+                                <input type="text" class="form-control" id="bairroPaciente" placeholder="Digite seu bairro"/>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-3">
+                            <div class="form-group">
+                                <label for="enderecoPaciente">Endereço</label>
+                                <input type="text" class="form-control" id="enderecoPaciente" placeholder="Digite seu endereço"/>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-3">
+                            <div class="form-group">
+                                <label for="numeroPaciente">Número</label>
+                                <input type="text" class="form-control" id="numeroPaciente" placeholder="Digite seu número" />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="mensagemPaciente">Mensagem:</label>
+                        <textarea class="form-control" id="mensagemPaciente" rows="3"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <input class="btn btn-success btn-block" type="submit" value="Enviar"/>
+                    </div>
+                </form>
             </div>
-            <div class="form-row">
-              <div class="col">
-                <label for="telPaciente">Telefone</label>
-                <input type="tel" class="form-control paciente" id="telPaciente" placeholder="(21) 6524-5545">
-              </div>
-              <div class="col">
-                <label for="idadePaciente">Data de Nascimento</label>
-                <input type="date" class="form-control" id="idadePaciente" placeholder="25/04/1985">
-              </div>
-              <div class="col">
-                <label for="sexoPaciente">Sexo</label>
-                <select class="form-control" id="sexoPaciente">
-                  <option>Masculino</option>
-                  <option>Feminino</option>
-                  <option>Não Binário</option>
-                </select>
-              </div>
+        </section>
+
+        <a class="whatsapp" href="https://api.whatsapp.com/send?phone=5521968652994" target="_blank">
+            <div class="bt-text">
+                Fale agora pelo<br>
+                <span><b>Whats</b>App</span>
             </div>
-            <div class="form-row">
-              <div class="col-md-12 col-lg-6">
-                <label for="acompanhamentoPaciente">Já teve acompanhamento psicológico?</label>
-                <select class="form-control" id="acompanhamentoPaciente">
-                  <option>Sim</option>
-                  <option>Não</option>
-                </select>
-              </div>
-              <div class="col-md-12 col-lg-6">
-                <label for="planoPaciente">Possui plano de saúde?</label>
-                <select class="form-control" id="planoPaciente">
-                  <option>Sim</option>
-                  <option>Não</option>
-                </select>
-              </div>
+            <div class="icone">
+                <i class="fab fa-whatsapp"></i>
             </div>
-            <div class="form-row">
-              <div class="col-md-6 col-lg">
-                <label for="estadoPaciente">Estado</label>
-                <input type="text" class="form-control" id="estadoPaciente" placeholder="Rio de Janeiro">
-              </div>
-              <div class="col-md-6 col-lg">
-                <label for="bairroPaciente">Bairro</label>
-                <input type="text" class="form-control" id="bairroPaciente" placeholder="Galo Branco">
-              </div>
-              <div class="col-md-6 col-lg">
-                <label for="enderecoPaciente">Endereço</label>
-                <input type="text" class="form-control" id="enderecoPaciente" placeholder="Rua das laranjeiras">
-              </div>
-              <div class="col-md-6 col-lg">
-                <label for="numeroPaciente">Nº</label>
-                <input type="text" class="form-control" id="numeroPaciente" placeholder="59">
-              </div>
-            </div>
-            <div class="form-group">
-              <label for="mensagemPaciente">Mensagem:</label>
-              <textarea class="form-control" id="mensagemPaciente" rows="3"></textarea>
-            </div>
-            <div class="form-group">
-              <div class="col-sm-2">
-                <input class="form-control" type="submit" value="Enviar">
-              </div>
-            </div>
-          </form>
-          
-        </div>
-    </section>
-    
-    <a class="whatsapp"  href="https://api.whatsapp.com/send?phone=5521968652994" target="_blank">
-        <div class="bt-text">
-          fale agora pelo<br>
-          <span><b>whats</b>app</span>
-        </div>
-        <div class="icone">
-          <i class="fab fa-whatsapp"></i>
-        </div>
-    </a>
+        </a>
 
     <script src="../js/jquery-3.4.1.min.js"></script>
     <script src="../js/jquery.mask.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/owl.carousel.min.js"></script>
     <script src="../js/main.js"></script>
-</body>
+    </body>
 </html>
